se avanzó y se empezó el codigo qr

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,5 +1,10 @@
 .centrado{
     position: relative;
     text-align: center;
-    top: 40%;
 }
+
+.centrado2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
