--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,12 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Ingresar</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <br><br><br>
+  <img alt="Logo" src="../../../assets/img/LogoRegistrAPPLight.png" />
   <ion-card>
-    <img alt="Silhouette of mountains" src="../../../assets/img/LogoRegistrAPPLight.png" />
     <ion-card-header class="centrado">
       <ion-card-title>Inicio de sesión</ion-card-title>
     </ion-card-header>
@@ -21,7 +16,7 @@
         <ion-input placeholder="Ingrese su contraseña" type="password"></ion-input>
       </ion-item>
   </ion-card-content>
-  <ion-buttons>
+  <ion-buttons class="centrado2">
     <ion-button style="color: rgb(255, 208, 0);" fill="clear" [routerLink]="['/home']">Ingresar</ion-button>
     <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/register']">Registrarse</ion-button>
   </ion-buttons>
