se avanzó y se hicieron las clases de usuarios

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,10 +7,11 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+
+<ion-content>
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">ola</ion-title>
+      <app-card titulo="sexo" fecha="01/01/0001" descripcion="oldsajdalksdja"></app-card>
     </ion-toolbar>
   </ion-header>
 </ion-content>
