Se creó login y registro de docente y estudiante

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,11 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
   <ion-header>
     <ion-toolbar>
-      <app-card titulo="sexo" fecha="01/01/0001" descripcion="oldsajdalksdja"></app-card>
+      <app-card titulo="BIENVENIDE COMPAÑERE" fecha="01/01/0001" descripcion="oldsajdalksdja"></app-card>
     </ion-toolbar>
   </ion-header>
 </ion-content>
