--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,11 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <ion-buttons>
+            <ion-list-header>RegistrApp</ion-list-header>
+            <ion-menu-button slot="end"><ion-icon name="arrow-back"></ion-icon></ion-menu-button>
+          </ion-buttons>
+          <ion-note>Ola esto es pa pasar la asistencia</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
