se empezó crud de clases(falta eliminar y editar)

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,8 +9,8 @@
 
 <ion-content>
   <ion-header>
-    <ion-toolbar>
-      <app-card titulo="BIENVENIDE COMPAÑERE" fecha="01/01/0001" descripcion="oldsajdalksdja"></app-card>
-    </ion-toolbar>
+    <!-- <ion-toolbar>
+      <app-card titulo="" fecha="01/01/0001" descripcion="oldsajdalksdja"></app-card>
+    </ion-toolbar> -->
   </ion-header>
 </ion-content>
