--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -2,7 +2,6 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/login"></ion-back-button>
-      <ion-menu-button></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -18,7 +17,7 @@
              <ion-input #correo type="text" label="Correo" labelPlacement="floating" placeholder="Ej: Juan.perez@duocuc.cl"></ion-input>
            </ion-item>
            <ion-item>
-             <ion-input #contrasena type="password" label="Contrasena" labelPlacement="floating" placeholder="Ej: 123456789"></ion-input>
+             <ion-input #contrasena type="password" label="Contraseña" labelPlacement="floating" placeholder="Ej: 123456789"></ion-input>
            </ion-item>
            <ion-item>
              <ion-input #nombre type="text" label="Nombre" labelPlacement="floating" placeholder="Ej: Juan Antonio Pérez Gómez"></ion-input>
