--- a/src/app/pages/clases/clases.page.html
+++ b/src/app/pages/clases/clases.page.html
@@ -8,19 +8,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-button [routerLink]="['/clases/crearclase']" color="success" expand="block">Crear Clase <ion-icon name="add-circle"></ion-icon></ion-button>
-    <ion-item *ngFor="let aux of listaClases" [routerLink]="['/clases/', aux.id]">
-      <ion-card-header>
-        <ion-card-title>{{ aux.nombreAsignatura }}</ion-card-title>
-        <ion-card-subtitle>{{ aux.siglaAsignatura }} / {{ aux.seccion }}</ion-card-subtitle>
-        <p>Docente: {{ aux.docente }}</p>
-      </ion-card-header>
-    
-      <ion-card-content>
-        <p>Inicio: {{ aux.horaInicio }}</p>
-        <p>Término: {{ aux.horaTermino }}</p>
-      </ion-card-content>
-    </ion-item>
+  
+  <ion-card *ngFor ="let user of listaUsuarioIniciado">
+    <ion-button *ngIf="user.docente" [routerLink]="['/clases/crearclase']" color="success" expand="block">Crear Clase <ion-icon name="add-circle"></ion-icon></ion-button>
+    <app-clasecard *ngFor="let aux of listaClases" [routerLink]="['/clases/', aux.id]"
+      nombre="{{aux.nombreAsignatura}}"
+      sigla= "{{aux.siglaAsignatura}}"
+      seccion= "{{aux.seccion}}"
+      docente= "{{aux.docente}}"
+      horaInicio= "{{aux.horaInicio}}"
+      horaTermino= "{{aux.horaTermino}}"
+      ></app-clasecard>
   </ion-card>
 </ion-content>
