--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,15 +2,23 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-title class="centrado">RegistrAPP</ion-title>
+      <ion-title class="centrado" *ngFor="let user of listaUsuarioIniciado">Bienvenido/a {{ user.nombre }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-header>
-    <!-- <ion-toolbar>
-      <app-card titulo="" fecha="01/01/0001" descripcion="oldsajdalksdja"></app-card>
-    </ion-toolbar> -->
+  <ion-header>  
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://www.nubox.com/hs-fs/hubfs/01%20Brand/Material%20Kit%20de%20Contenidos/Buyer%20Empresa.png?width=600&height=600&name=Buyer%20Empresa.png" />
+      <ion-card-header>
+        <ion-card-title>Conoce tus clases y horarios.</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+        Aquí puedes pasar la asistencia fácilmente escaneando el código QR generado por el docente a cargo de la clase.
+      </ion-card-content>
+      <img alt="Silhouette of mountains" src="https://images.squarespace-cdn.com/content/v1/5fb6990036f10a48f6dc2718/1605802302373-JP2U1FPYOPZHI2S26JTO/4.png" />
+    </ion-card>
   </ion-header>
 </ion-content>
