--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,24 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>profile</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <div class="container" *ngFor="let user of listaUsuarioIniciado">
+        <ion-title *ngIf="user.docente" class="centrado">Docente</ion-title>
+        <ion-title *ngIf="user.docente == false" class="centrado">Estudiante</ion-title>
+
+      </div>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card >
-    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
-    <ion-card-header>
-      <ion-card-title></ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-    </ion-card-header>
-  
-    <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
-    </ion-card-content>
-  </ion-card>
+  <ion-header>
+    <app-card *ngFor="let user of listaUsuarioIniciado" nombre="{{ user.nombre }}" imagen="{{user.imagen}}" correo="{{user.correo}}" sede="{{user.sede}}"></app-card>
+  </ion-header>
+<div *ngFor="let user of listaUsuarioIniciado" class="container">
+  <ion-button (click)="cerrarSesion()" color="danger" expand="full">Cerrar sesión</ion-button>
 
-
-  <div *ngIf="usuario">
-    <p>Nombre: {{ usuario.id }}</p>
-  </div>
+</div>
 </ion-content>
