login requerido para todas las vistas

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-header>  
-    <ion-card>
+    <ion-card *ngFor="let user of listaUsuarioIniciado">
       <img alt="Silhouette of mountains" src="https://www.nubox.com/hs-fs/hubfs/01%20Brand/Material%20Kit%20de%20Contenidos/Buyer%20Empresa.png?width=600&height=600&name=Buyer%20Empresa.png" />
       <ion-card-header>
         <ion-card-title>Conoce tus clases y horarios.</ion-card-title>
