se crea api propia

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,18 +6,34 @@
       <ion-card-title>Inicio de sesión</ion-card-title>
     </ion-card-header>
   
-    <ion-card-content>
+    <ion-card-content [formGroup]="loginForm">
       <ion-item>
         <ion-label position="floating">Usuario</ion-label>
-        <ion-input #correo placeholder="Ingrese su usuario"></ion-input>
+        <ion-input  [(ngModel)]="emailValue" formControlName="email" type="email" #correo placeholder="Ingrese su correo"></ion-input>
       </ion-item>
+      <!-- Si el correo está vacío -->
+      <ion-text position="stacked" color="danger" *ngIf="loginForm.get('email')?.hasError('required')">
+        El correo es requerido
+      </ion-text>
+      <!-- Si el correo no es un correo -->
+      <ion-text position="stacked" color="danger" *ngIf="loginForm.get('email')?.hasError('email')">
+        El correo es inválido
+      </ion-text>
       <ion-item>
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input #contrasena placeholder="Ingrese su contraseña" type="password"></ion-input>
+        <ion-input [(ngModel)]="passValue" formControlName="password" #contrasena placeholder="Ingrese su contraseña" type="password"></ion-input>
       </ion-item>
+      <!-- Si la contraseña está vacía -->
+      <ion-text position="stacked" color="danger" *ngIf="loginForm.get('password')?.hasError('required')">
+        La contraseña es requerida
+      </ion-text>
+      <!-- Si la contraseña tiene menos de 6 caracteres -->
+      <ion-text position="stacked" color="danger" *ngIf="loginForm.get('password')?.hasError('minlength')">
+        La contraseña debe poseer 6 caracteres mínimo
+      </ion-text>
   </ion-card-content>
   <ion-buttons class="centrado2">
-    <ion-button (click)="login(correo.value, contrasena.value)" style="color: rgb(255, 208, 0);" fill="clear">Ingresar</ion-button>
+    <ion-button [disabled]="!loginForm.valid" (click)="login(correo.value, contrasena.value)" style="color: rgb(255, 208, 0);" fill="clear">Ingresar</ion-button>
     <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/register']">Registrarse</ion-button>
   </ion-buttons>
   <ion-button style="color: rgb(0, 17, 255);" fill="clear" [routerLink]="['/registrodocente']">Registrarse como Docente</ion-button>
