--- a/src/app/pages/api/add/add.page.html
+++ b/src/app/pages/api/add/add.page.html
@@ -1,13 +1,23 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>add</ion-title>
+    <ion-title>Agregar Jugador</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">add</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Agregar Jugador</ion-card-title>
+    </ion-card-header>
+    
+    <ion-card-content>
+      <ion-item>
+        <ion-input #nombre [(ngModel)]="jugador.nombre" type="text" label="Nombre" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input #genero [(ngModel)]="jugador.genero" type="text" label="Genero" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-button color="primary" (click)="addJugador()">Agregar</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
