avance api propia

--- a/src/app/pages/api/add/add.page.html
+++ b/src/app/pages/api/add/add.page.html
@@ -12,10 +12,10 @@
     
     <ion-card-content>
       <ion-item>
-        <ion-input #nombre [(ngModel)]="jugador.nombre" type="text" label="Nombre" labelPlacement="floating"></ion-input>
+        <ion-input #nombre [(ngModel)]="usuario.nombre" type="text" label="Nombre" labelPlacement="floating"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input #genero [(ngModel)]="jugador.genero" type="text" label="Genero" labelPlacement="floating"></ion-input>
+        <ion-input #genero [(ngModel)]="usuario.run" type="text" label="Genero" labelPlacement="floating"></ion-input>
       </ion-item>
       <ion-button color="primary" (click)="addJugador()">Agregar</ion-button>
     </ion-card-content>
